tests/error/cant_overload2.gw
// [contains] but cannot override
class C {
	function void test(){}
	function int  test(int i){}
}
